# funky-hs

./: README.md  funky-hs.cabal
.stack-work/install/58752683/flag-cache/: MonadRandom-0.5.1-IY6HiWu00vQLARukQW3KMH  RSA-2.2.0-J6JCu8pjnzC9D0W2FC95Ly  SHA-1.6.4.2-6ZuKopcglGG4yoCGsd9koJ  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  adjunctions-4.3-4NsFv08p09OH79kZsQDVh1  aeson-1.0.2.1-G1kpgSAojvYmgSzD99JO5  ansi-terminal-0.6.3.1-CdiTOvx5ZEQ2RerUYIP05k  ansi-wl-pprint-0.6.7.3-KaeMs0wRg3QC5nOlh5MJx3  asn1-encoding-0.9.5-HJJq6ZDxartJr22VITuxrI  asn1-parse-0.9.4-8qPWWJBlI8cKoNfL6AzyNW  asn1-types-0.3.2-6Nxom8DWooq58tRnpCSFys  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  attoparsec-0.13.1.0-ECR7lrm2wO64uP6OW8ZTCi  authenticate-oauth-1.6-E2eUrRCvTFv6s0MJJdf53o  base-compat-0.9.3-m1TEyTenyr5nJN40TpHVj  base-orphans-0.5.4-ABoxiBf7nXc7Qqh66CgYc9  base16-bytestring-0.1.1.6-4E2p94lTx8gIceMhu8Kl9o  base64-bytestring-1.0.0.1-4O9TExPPz6eI82Yj7L4SIj  bifunctors-5.4.2-wt6HPG9UFgCjbd0zbVYNT  blaze-builder-0.4.0.2-CGB8BvrFgghHy5bLy0SFOg  byteable-0.1.1-2lU1pexQSLj1KbNO17UifQ  bytestring-builder-0.10.8.1.0-EUL7HUZoBoJHHdeLzmqEk9  cabal-helper-0.7.3.0-GgnMvw3xDqG5ig90b4nErY  case-insensitive-1.2.0.10-7eVVX59t93gCl3XctAmuil  cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  clock-0.7.2-8dRNleB7rysIZAOReuhpZA  cmdargs-0.10.17-IWa8ygdJhnJBShkQXN8V9I  comonad-5.0.1-7j4AeOMTFovFSFO9XMFm1  conduit-1.2.10-7LSpuK7eDymFH3gxuXprIT  connection-0.2.8-FITGBThdKRj8W9pz4S39FO  contravariant-1.4-3UCY3arLvoG71jrGOYoc39  cookie-0.4.2.1-K68NuFIZ07nEstxwB6c3aL  cpphs-1.20.5-ItOOodR0Hps3mzfwh8D28y  crypto-api-0.13.2-BhWA2wg46NK5ix1Z7qY9xR  cryptonite-0.21-1N8UQqme8oz57Yg2gYyl88  (+105 more)
app/: Main.hs
src/: Lib.hs
src/Control/Funky/: Commands.hs
src/Network/: Funky.hs
src/Network/Funky/: API.hs  Events.hs  Gateway.hs  Types.hs
(+21 files in other folders)
