name:                funky-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/funky-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , websockets
                     , mtl
                     , text
                     , pipes
                     , pipes-concurrency
                     , network
                     , wreq
                     , stm
                     , bytestring
                     , unordered-containers
                     , lens
                     , aeson
                     , lens-aeson
                     , zlib
                     , transformers
  default-language:    Haskell2010

executable funky-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , funky-hs
  default-language:    Haskell2010

test-suite funky-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , funky-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/funky-hs
